virt01/manual/media/sonarr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes-excludes: torrent,tvshows
        backup.velero.io/backup-volumes: sonarr-pv
      labels:
        app: sonarr
    spec:
      serviceAccountName: sonarr-sa
      containers:
        - name: sonarr
          image: harbor.nf.lab/proxy.docker.io/linuxserver/sonarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8989
              name: sonarr-port
              protocol: TCP
          resources:
            requests:
              cpu: 20m
              memory: 100Mi
          volumeMounts:
            - name: sonarr-pv
              mountPath: /config
            - name: tvshows
              mountPath: /tv
            - name: torrent
              mountPath: /data
      volumes:
        - name: sonarr-pv
          persistentVolumeClaim:
            claimName: sonarr-pvc
        - name: torrent
          hostPath:
            type: Directory
            path: /mnt/hdd01/torrent
        - name: tvshows
          hostPath:
            path: /mnt/emby_unified/TVShows
            type: Directory
